# rockinYouBot

./: Info.txt  README.md  repository.debs
command_tools/rockin_command_tools/: CMakeLists.txt  package.xml
command_tools/rockin_teleop/: CMakeLists.txt  package.xml
command_tools/rockin_teleop/ros/config/: RockinTeleopJoypad.cfg
command_tools/rockin_teleop/ros/include/rockin_teleop/: rockin_teleop_joypad.h
command_tools/rockin_teleop/ros/launch/: rockin_teleop_joypad.launch
command_tools/rockin_teleop/ros/src/: rockin_teleop_joypad.cpp  rockin_teleop_joypad_node.cpp
environments/rockin_default_env_config/: CMakeLists.txt  package.xml  upload_param.launch
environments/rockin_default_env_config/rockin-arena/: map.pgm  navigation_goals.yaml  upload_param_rockin-arena.launch
environments/rockin_environments/: CMakeLists.txt  package.xml
kinematics/rockin_arm_kinematics_youbot/: CMakeLists.txt  package.xml  plugins.xml
kinematics/rockin_arm_kinematics_youbot/ros/src/: rockin_arm_analytical_inverse_kinematics.cpp  rockin_arm_analytical_inverse_kinematics_youbot_moveit_plugin.cpp  rockin_arm_ikfast_kinematics_solver_youbot.cpp
kinematics/rockin_kinematics/: CMakeLists.txt  package.xml
manipulation/rockin_arm_cartesian_control/: CMakeLists.txt  package.xml
manipulation/rockin_arm_cartesian_control/common/src/: rockin_arm_cartesian_control.cpp
manipulation/rockin_arm_cartesian_control/ros/launch/: example.launch  rockin_arm_cartesian_control_youbot.launch
manipulation/rockin_arm_cartesian_control/ros/src/: rockin_arm_cartesian_control_node.cpp
manipulation/rockin_arm_cartesian_control/ros/tools/: publish_cart_vel.sh
manipulation/rockin_arm_relative_motion_control/: CMakeLists.txt  package.xml
manipulation/rockin_arm_relative_motion_control/ros/launch/: arm_relative_motion_controller.launch
manipulation/rockin_gripper_controller/: CMakeLists.txt  package.xml
manipulation/rockin_gripper_controller/ros/launch/: gripper_controller.launch
manipulation/rockin_gripper_services/: CMakeLists.txt  package.xml
manipulation/rockin_gripper_services/ros/launch/: gripper_service_server.launch
manipulation/rockin_gripper_services/ros/scripts/: gripper_service_server
manipulation/rockin_manipulation/: CMakeLists.txt  package.xml
manipulation/rockin_manipulation_msgs/: CMakeLists.txt  package.xml
manipulation/rockin_manipulation_utils/: CMakeLists.txt  package.xml  setup.py
manipulation/rockin_manipulation_utils/ros/src/: ros_urdf_loader.cpp
manipulation/rockin_manipulation_utils/ros/test/: extractors_unittest.py
manipulation/rockin_moveit_rockinYoubot/: CMakeLists.txt  package.xml
manipulation/rockin_moveit_rockinYoubot/config/: joint_limits.yaml  youbot.srdf
manipulation/rockin_moveit_rockinYoubot/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  (+10 more)
manipulation/rockin_moveit_scene/: CMakeLists.txt  package.xml  setup.py
manipulation/rockin_moveit_scene/ros/launch/: arm_workspace_restricter.launch  grasped_object_attacher.launch
manipulation/rockin_moveit_scene/ros/scripts/: arm_workspace_restricter_node  grasped_object_attacher_node
manipulation/rockin_moveit_scene/ros/src/rockin_moveit_scene_ros/: attach_grasped_object.py
manipulation/rockin_moveit_youbot/: CMakeLists.txt  package.xml
perception/rockin_linear_regression/: CMakeLists.txt  package.xml
perception/rockin_linear_regression/common/src/: rockin_laser_scan_linear_regression.cpp
perception/rockin_linear_regression/ros/include/rockin_linear_regression/: rockin_laser_scan_linear_regression_util.h
perception/rockin_linear_regression/ros/launch/: rockin_laser_scan_linear_regression.launch
perception/rockin_linear_regression/ros/src/: rockin_laser_scan_linear_regression_node.cpp  rockin_laser_scan_linear_regression_util.cpp
perception/rockin_perception_msgs/: CMakeLists.txt  package.xml
robots/rockin_bringup/: CMakeLists.txt  package.xml  robot.launch
robots/rockin_bringup/components/: base_front_hokuyo_node.launch  youbot_oodl_driver.launch
robots/rockin_bringup/robots/: rockin_youBot.launch
robots/rockin_default_robot_config/: CMakeLists.txt  package.xml  upload_param.launch
robots/rockin_hardware_config/: CMakeLists.txt  package.xml  upload_param.launch
robots/rockin_hardware_config/rockin_youBot/config/: gripper.yaml  laser_front.yaml
robots/rockin_robots/: CMakeLists.txt  package.xml
rockin_navigation/rockin_2dnav/: CMakeLists.txt  package.xml
rockin_navigation/rockin_2dnav/ros/config/dwa/: costmap_common_params.yaml
rockin_navigation/rockin_2dnav/ros/config/eband/: costmap_common_params.yaml
rockin_navigation/rockin_2dnav/ros/config/trajectory/: costmap_common_params.yaml
rockin_navigation/rockin_2dnav/ros/launch/: 2dnav.launch  2dnav_dwa.launch  2dnav_eband.launch  2dnav_mockup.launch  2dnav_trajectory.launch  amcl.launch  nav_common.launch
rockin_navigation/rockin_2dnav/ros/mockup/: move_base_node_mockup
rockin_navigation/rockin_2dnav/ros/src/: move_base_adapted.cpp  orient_goal.cpp
rockin_navigation/rockin_2dslam/: CMakeLists.txt  package.xml
rockin_navigation/rockin_base_placement/: CMakeLists.txt  package.xml
rockin_navigation/rockin_base_placement/ros/launch/: rockin_base_placement.launch  rockin_base_placement_mockup.launch
rockin_navigation/rockin_base_placement/ros/mockup/: rockin_base_placement_node_mockup
rockin_navigation/rockin_base_placement/ros/src/: rockin_base_placement_node.cpp
rockin_navigation/rockin_base_placement/ros/tools/: rockin_basescan_orientation_test.cpp
rockin_navigation/rockin_navigation/: CMakeLists.txt  package.xml
rockin_navigation/rockin_navigation_msgs/: CMakeLists.txt  package.xml
rockin_navigation/rockin_navigation_tools/: CMakeLists.txt  package.xml
rockin_navigation/rockin_relative_base_controller/: CMakeLists.txt  package.xml
simulation/rockin_bringup_sim/: CMakeLists.txt  package.xml  robot.launch
simulation/rockin_gazebo/: CMakeLists.txt  package.xml
simulation/rockin_simulation/: CMakeLists.txt  package.xml
(+66 files in other folders)
