<?xml version="1.0"?>
<package>
  <name>rockin_command_tools</name>
  <version>0.0.1</version>
  <description>Command tools for making the robot move with other devices i.e. a joypad</description>

  <license>GPLv3</license>

  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>

  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
