<?xml version="1.0"?>
<package>
  <name>rockin_teleop</name>
  <version>0.0.1</version>
  <description>teleoperation via joypad</description>

  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>

  <license>GPLv3</license>
  
  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>brics_actuator</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>brics_actuator</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  
</package>
