<?xml version="1.0"?>
<package>
  <name>rockin_default_env_config</name>
  <version>0.0.1</version>
  <description>environmental data like navigation goals, maps, ...</description>
  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>
  <license>GPLv3</license>  
  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>
  <buildtool_depend>catkin</buildtool_depend>
</package>
