<?xml version="1.0"?>
<package>
  <name>rockin_environments</name>
  <version>0.0.1</version>
  <description>The rockin_environments meta package</description>
  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>
  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
