<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>rockin_arm_kinematics_youbot</name>
  <version>0.0.1</version>
  <description>arm kinematics for the youBot</description>
 
  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>
  
  <license>GPLv3</license>
  
  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>

  <export>
    <moveit_core plugin="${prefix}/plugins.xml"/>
  </export>

</package>
