<?xml version="1.0"?>
<package>
  <name>rockin_kinematics</name>
  <version>0.0.1</version>
  <description>inverse kinematics for industrial robots.</description>

  <license>GPLv3</license>

  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>

  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
