<?xml version="1.0"?>
<package>
  <name>rockin_gripper_controller</name>
  <version>0.0.0</version>
  <description>controller for using the gripper in moveit</description>

  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rockin_manipulation_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>brics_actuator</run_depend>
</package>
