<?xml version="1.0"?>
<package>
  <name>rockin_manipulation_utils</name>
  <version>0.0.0</version>
  <description>The rockin_manipulation_utils package</description>

  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>
  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>

  <test_depend>unittest</test_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>

</package>
