<?xml version="1.0"?>
<package>
  <name>rockin_moveit_scene</name>
  <version>0.1.0</version>
  <description>
  A package for interacting with the arm motion planning scene.

  The planning scene represents obstacles which the arm could collide with
  Obstacles can be part of the planning scene which should be avoided,
  or they can be attached to the arm and the planner will avoid collisions between
  the arm with attached object and other collision objects in the scene.
  </description>
  <license>GPLv3</license>

  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>
  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <test_depend>unittest</test_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rockin_perception_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
</package>
