<?xml version="1.0"?>
<package>
  <name>rockin_linear_regression</name>
  <version>0.0.1</version>
  <description>component which performs linear regression on a laser scan and outputs the coefficients</description>

  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>

  <license>GPLv3</license>
 
  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rockin_perception_msgs</build_depend> 
  <build_depend>roscpp</build_depend> 
  
  <run_depend>rockin_perception_msgs</run_depend> -->


</package>
