<?xml version="1.0"?>
<package>
  <name>rockin_default_robot_config</name>
  <version>0.0.1</version>
  <description>default robot configurations e.g. for the arm, gripper, etc.</description>
  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>
  <license>GPLv3</license>
  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>
  <buildtool_depend>catkin</buildtool_depend>
</package>
