<?xml version="1.0"?>
<package>
  <name>rockin_hardware_config</name>
  <version>0.0.1</version>
  <description>urdf descriptions and yaml configuration files for different industrial robots</description>

  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>

  <license>GPLv3</license>

  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rockin_calibration_data</run_depend>
  <run_depend>youbot_description</run_depend>

</package>
