<?xml version="1.0"?>
<package>
  <name>rockin_2dnav</name>
  <version>0.0.1</version>
  <description>2d base navigation</description>

  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>

  <license>GPLv3</license>

  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
 
</package>
