<?xml version="1.0"?>
<package>
  <name>rockin_base_placement</name>
  <version>0.0.1</version>
  <description>orient the base w.r.t. to the coefficients of the linear regression</description>

  <maintainer email="tim.friedrich@kuka.com">Tim Friedrich</maintainer>

  <license>GPLv3</license>

  <author email="tim.friedrich@kuka.com">Tim Friedrich</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rockin_perception_msgs</build_depend>
  <build_depend>rockin_navigation_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rockin_perception_msgs</run_depend>
  <run_depend>rockin_navigation_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  </package>
